--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -7,13 +7,17 @@ body {
 	background-repeat: no-repeat;
 
 	color: #f3f3f3;
-	font-size: 18px;
+	font-size: 20px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
 	padding: 30px;
+	overflow: hidden;
+	letter-spacing: 1px;
 }
+
+
 
 .cartao {
 	background-color: #070d12;
@@ -32,8 +36,9 @@ body {
 }
 
 .cartao .minhas-informacoes img {
-	border-radius: 50px;
-	border: 4px solid #02d08f;
+	width: 7em;
+	border-radius: 50%;
+	border: 4px solid #3f5e86;
 }
 
 .cartao .minhas-informacoes .nome {
@@ -126,7 +131,8 @@ body {
 }
 
 .redes-sociais .curriculo {
-	background: #06c185;
+	background: #ffffff;
+	color: black;
 }
 
 .redes-sociais .linkedin {
