--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -6,7 +6,7 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 
-	color: #f3f3f3;
+	color: #ffffff;
 	font-size: 20px;
 	display: flex;
 	justify-content: center;
