--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,7 @@ body {
 .cartao .minhas-informacoes img {
 	width: 7em;
 	border-radius: 50%;
-	border: 4px solid #3f5e86;
+	border: 4px solid #85bbc5;
 }
 
 .cartao .minhas-informacoes .nome {
